Reintegrate SQL Injection toggle feature

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -18,6 +18,13 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required autocomplete="current-password">
             </div>
+            <div class="form-group">
+                <label for="secure">Security Mode:</label>
+                <select id="secure" name="secure">
+                    <option value="true" selected>Secure</option>
+                    <option value="false">Vulnerable</option>
+                </select>
+            </div>
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
