added xml parsing vulnerability, mitigation, and documentation

--- a/frontend/pages/transfer.html
+++ b/frontend/pages/transfer.html
@@ -13,7 +13,7 @@
     <h1>Capstone Bank - Transfer Funds</h1>
     <h2>{{ user.name }}'s Session: Make a Transfer</h2>
 
-		{% if user.secure %}
+		{% if secure_mode %}
 			<!-- secure mode (uses FlaskForm) -->
 			<!-- code adapted from:
 				https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-iii-web-forms -->
