--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -19,6 +19,7 @@
         <li><a href="/transfer">Transfer</a></li>
         <li><a href="/deposit">Deposit</a></li>
         <li><a href="/profile">Profile</a></li>
+        <li><a href="/import-data">Import</a></li>
         <li><a href="/logout">Logout</a></li>
       </ul>
     </nav>
