--- a/frontend/pages/accounts.html
+++ b/frontend/pages/accounts.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <p class="banner">This site is for cybersecurity testing purposes. Vulnerable mode is: <strong>{{ mode }}</strong></p>
 
+    <p class="banner">This site is for cybersecurity testing purposes. <br> Current Mode: <strong>{{ mode }}</strong> </p>
+    
     <h1>Capstone Bank - User Portal</h1>
     <h2>{{ user.name }}'s Session: Accounts</h2>
 
