--- a/frontend/pages/list-users.html
+++ b/frontend/pages/list-users.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<p class="banner">This site is for cybersecurity testing purposes. Vulnerable mode is <strong>{{ mode }}</strong></p>
+		<p class="banner">This site is for cybersecurity testing purposes. <br> Current Mode: <strong>{{ mode }}</strong> </p>
 		<h1>Capstone Bank - Admin Portal</h1>
 		<h2>{{ admin.name }}'s Session: List All Users</h2>
 		<div class="table-wrapper">
