--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <p class="banner">This site is for cybersecurity testing purposes. Vulnerable mode is: <strong>{{ mode }}</strong></p>
+    <p class="banner">This site is for cybersecurity testing purposes. <br> Current Mode: <strong>{{ mode }}</strong> </p>
 
     <h1>Capstone Bank - User Profile</h1>
     <h2>{{ user.name }}'s Session: Profile</h2>
