--- a/frontend/pages/import-data.html
+++ b/frontend/pages/import-data.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <p class="banner">This site is for cybersecurity testing purposes. Vulnerable mode is: <strong>{{ mode }}</strong></p>
+    <p class="banner">This site is for cybersecurity testing purposes. <br> Current Mode: <strong>{{ mode }}</strong> </p>
 
     <h1>Import Account Data</h1>
     <p>Upload an XML file from another bank to import your checking and savings balances.</p>
@@ -21,6 +21,10 @@
     {% if message %}
       <p class="message">{{ message }}</p>
     {% endif %}
+
+    <br><br>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
+    
   </div>
 </body>
 </html>
