- app.py: added generate_user_list() to generate a users.js that can be viewed in the inspector tool to see a list of users and their data - dashboard.html: added script line to call /users.js path - profile.html: added checkbox to show password in vulnerable mode and hide password in secure mode.

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Capstone Bank - Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <meta charset="UTF-8">
+    <title>Capstone Bank - Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script src="/users.js"></script>
 </head>
 <body>
   <div class="container">
