Feature / Broken Access Control (#19)
* add Broken Access Control screenshots

* secure endpoints /list-users and /delete-user against Vertical Broken Access Control attacks

* add documentation for Vertical Broken Access Control Attack

* remove empty lines

* refactor to if/else to add passing username as query parameter functionality in vulnerable mode

* in profile(): refactor to allow passing data in query parameter in vulnerable mode; check for Horizontal Broken Access Control attack in secure mode.

* add/update screenshots for Broken Access Control attack.

* add file to keep dir attack-demos/broken_access_control not empty

* fix: remove redundant word in comment

* add: secure & vulnerable setup against/allowing horizontal broken access control in /profile endpoint.

* add: horizontal broken access control & sources; refactor: vertical broken access control; update: curl commands & links

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -19,7 +19,12 @@
         <li><a href="/accounts">Accounts</a></li>
         <li><a href="/transfer">Transfer</a></li>
         <li><a href="/deposit">Deposit</a></li>
-        <li><a href="/profile">Profile</a></li>
+				{% if mode == "secure" %}
+	        <li><a href="/profile">Profile</a></li>
+				{% else %}
+					<!-- vulnerable mode: pass username as query parameter -->
+					<li><a href="/profile?username={{ user.name }}">Profile</a></li>
+				{% endif %}
         <li><a href="/import-data">Import</a></li>
         <li><a href="/logout">Logout</a></li>
       </ul>
