added account activity page to use for xss. added account activity in app.py to handle search query added activity menu to dashboard

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -15,19 +15,20 @@
     <h2>Welcome, {{ user.name }}!</h2>
 
     <nav>
-      <ul class="nav-links">
-        <li><a href="/accounts">Accounts</a></li>
-        <li><a href="/transfer">Transfer</a></li>
-        <li><a href="/deposit">Deposit</a></li>
-				{% if mode == "secure" %}
-	        <li><a href="/profile">Profile</a></li>
-				{% else %}
-					<!-- vulnerable mode: pass username as query parameter -->
-					<li><a href="/profile?username={{ user.name }}">Profile</a></li>
-				{% endif %}
-        <li><a href="/import-data">Import</a></li>
-        <li><a href="/logout">Logout</a></li>
-      </ul>
+        <ul class="nav-links">
+            <li><a href="/accounts">Accounts</a></li>
+            <li><a href="/transfer">Transfer</a></li>
+            <li><a href="/deposit">Deposit</a></li>
+            {% if mode == "secure" %}
+            <li><a href="/profile">Profile</a></li>
+            {% else %}
+            <!-- vulnerable mode: pass username as query parameter -->
+            <li><a href="/profile?username={{ user.name }}">Profile</a></li>
+            {% endif %}
+            <li><a href="/import-data">Import</a></li>
+            <li><a href="/account-activity">Activity</a></li>
+            <li><a href="/logout">Logout</a></li>
+        </ul>
     </nav>
   </div>
 </body>
