--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -1,30 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Register - Capstone Bank</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Register - Capstone Bank</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="container">
-        <h2>Create an Account</h2>
-        <form action="/register" method="POST">
-            <div class="form-group">
-                <label for="username">Choose a Username:</label>
-                <input type="text" id="username" name="username" required autocomplete="username">
-            </div>
-            <div class="form-group">
-                <label for="password">Create a Password:</label>
-                <input type="password" id="password" name="password" required autocomplete="new-password">
-            </div>
-            <div class="form-group">
-                <label for="confirm-password">Confirm Password:</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
-            </div>
-            <button type="submit">Register</button>
-        </form>
-        <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
-    </div>
+  <div class="container">
+    <h2>Create an Account</h2>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <div class="flash-messages">
+          <p style="color: red;">{{ messages[-1] }}</p>
+        </div>
+        {% if 'Password must be' in messages[-1] %}
+          <div class="password-hint" style="color: #555;">
+            <p><strong>Password Requirements:</strong></p>
+            <ul>
+              <li>At least 8 characters long</li>
+              <li>At least one uppercase letter</li>
+              <li>At least one lowercase letter</li>
+              <li>At least one number</li>
+              <li>At least one special character (e.g., !, @, #)</li>
+            </ul>
+          </div>
+        {% endif %}
+      {% endif %}
+    {% endwith %}
+
+    <form action="/register" method="POST">
+      <div class="form-group">
+        <label for="username">Choose a Username:</label>
+        <input type="text" id="username" name="username" required autocomplete="username">
+      </div>
+      <div class="form-group">
+        <label for="password">Create a Password:</label>
+        <input type="password" id="password" name="password" required autocomplete="new-password">
+      </div>
+      <div class="form-group">
+        <label for="confirm-password">Confirm Password:</label>
+        <input type="password" id="confirm-password" name="confirm-password" required>
+      </div>
+      <div class="form-group">
+        <label for="secure">Security Mode:</label>
+        <select name="secure" id="secure">
+          <option value="true">Secure</option>
+          <option value="false">Vulnerable</option>
+        </select>
+      </div>
+      <button type="submit">Register</button>
+    </form>
+    <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
+  </div>
 </body>
 </html>
